examples/err-notdecl.uc
test(){
    a = 5; // error: identifier not declared

    return a; // error: identifier not declared
}